ajuste css e addicionado pedra vencedor

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Julee&family=Viga&display=swap" rel="stylesheet" />
   </head>
-  <body>
+  <body class="h-full">
     <div id="root" class="bg-zinc-800"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
