--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game Cross</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Julee&family=Viga&family=Rampart+One&display=swap"
-      rel="stylesheet"
-    />
+    <title>Card Game</title>
   </head>
-  <body>
-    <div id="root" class="bg-zinc-800"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <body class="bg-zinc-800 h-full ">
+    <div id="root" class="h-full"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
